<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="layout_supervisor_drawer_layout_user_branch_manage_title">Branches</string>
    <string name="layout_supervisor_drawer_layout_user_manage_list_title">Users</string>
    <string name="layout_supervisor_drawer_layout_product_manage_category_selection_title">Catalog</string>

    <string name="fragment_dynamics_filter_by_days">Day</string>
    <string name="fragment_dynamics_filter_by_weeks">Week</string>
    <string name="fragment_dynamics_filter_by_months">Month</string>
    <string name="fragment_dynamics_screen_title">Sale</string>
    <string name="fragment_dynamics_title_vat">VAT</string>
    <string name="fragment_dynamics_title_discounts">Discount</string>
    <string name="fragment_dynamics_title_card">Card</string>
    <string name="fragment_dynamics_title_cash">Cash</string>
    <string name="fragment_dynamics_title_receipts">Receipts</string>
    <string name="fragment_dynamics_title_refunds">Refunds</string>
    <string name="fragment_dynamics_title_sales">Sale</string>

    <string name="fragment_feature_supervisor_dashboard_sync_successfully_finished">Sync completed successfully</string>
    <string name="kassa_chekini_chiqarish">Kassa chekini chiqarish</string>
</resources>
