<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Presentation.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/core_presentation_vector_drawable_menu"
            app:popupTheme="@style/Presentation.Theme.PopupOverlay"
            app:title="@string/fragment_dynamics_screen_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/sales_details_layout"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="1"
            tools:listitem="@layout/view_holder_sales_dynamics" />

        <LinearLayout
            android:id="@+id/sales_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end"
            app:layout_constraintBottom_toTopOf="@id/button_group">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_vertical"
                android:orientation="horizontal"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/sales_layout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    tools:layout_width="120dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sale_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|bottom"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/fragment_dynamics_title_sales"
                        android:textAppearance="@style/Presentation.TextAppearance.Regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sale_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|top"
                        android:paddingTop="@dimen/_12sdp"
                        android:textAppearance="@style/Presentation.TextAppearance.Small"
                        tools:text="5 000 000 000 000" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/refunds_layout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    tools:layout_width="120dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/refunds_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|bottom"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/fragment_dynamics_title_refunds"
                        android:textAppearance="@style/Presentation.TextAppearance.Regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/refunds_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|top"
                        android:paddingTop="@dimen/_12sdp"
                        android:textAppearance="@style/Presentation.TextAppearance.Small"
                        tools:text="18" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/receipts_layout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    tools:layout_width="120dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/receipts_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|bottom"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/fragment_dynamics_title_receipts"
                        android:textAppearance="@style/Presentation.TextAppearance.Regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/receipts_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|top"
                        android:paddingTop="@dimen/_12sdp"
                        android:textAppearance="@style/Presentation.TextAppearance.Small"
                        tools:text="2 500" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_vertical"
                android:orientation="horizontal"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:divider="@drawable/divider_horizontal"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <LinearLayout
                        android:id="@+id/payment_card_layout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:background="?selectableItemBackground"
                        android:orientation="vertical"
                        tools:layout_width="120dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/payment_card_title_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:layout_weight="50"
                            android:gravity="center"
                            android:text="@string/fragment_dynamics_title_card"
                            android:textAppearance="@style/Presentation.TextAppearance.Small" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/payment_card_value_text_value"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:layout_weight="50"
                            android:gravity="center"
                            android:textAppearance="@style/Presentation.TextAppearance.Small"
                            tools:text="25 000 000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/payment_layout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:background="?selectableItemBackground"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_width="120dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/payment_cash_title_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:layout_weight="50"
                            android:gravity="center"
                            android:text="@string/fragment_dynamics_title_cash"
                            android:textAppearance="@style/Presentation.TextAppearance.Small" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/payment_cash_value_text_value"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:layout_weight="50"
                            android:gravity="center"
                            android:textAppearance="@style/Presentation.TextAppearance.Small"
                            tools:text="1 250 000" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vat_layout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    tools:layout_width="120dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vat_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|bottom"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/fragment_dynamics_title_vat"
                        android:textAppearance="@style/Presentation.TextAppearance.Regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vat_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|top"
                        android:paddingTop="@dimen/_12sdp"
                        android:textAppearance="@style/Presentation.TextAppearance.Small"
                        tools:text="34 560" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/discount_layout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="33"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical"
                    tools:layout_width="120dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/discount_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|bottom"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/fragment_dynamics_title_discounts"
                        android:textAppearance="@style/Presentation.TextAppearance.Regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/discount_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"
                        android:gravity="center|top"
                        android:paddingTop="@dimen/_12sdp"
                        android:textAppearance="@style/Presentation.TextAppearance.Small"
                        tools:text="1 000 000" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true"
            tools:checkedButton="@id/days_button">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/days_button"
                style="@style/Supervisor.MaterialButton.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_dynamics_filter_by_days"
                app:backgroundTint="@android:color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/weeks_button"
                style="@style/Supervisor.MaterialButton.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_dynamics_filter_by_weeks"
                app:backgroundTint="@android:color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/months_button"
                style="@style/Supervisor.MaterialButton.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_dynamics_filter_by_months"
                app:backgroundTint="@android:color/transparent" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>